SPRING-BOOT-APP-MANIFEST/app_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app-deployment
  labels:
    app: spring-boot-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-app-pod
  template:
    metadata:
      labels:
        app: spring-boot-app-pod
    spec:
      containers:
      - name: spring-boot-app-container
        image: ashwinijadhavaws/orderbird-app-prod-image:35
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
