SPRING-BOOT-APP-MANIFEST/app_service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-service
spec:
  type: NodePort # commented this so that service is deployed as clusterIP as we are using ingress to access externally
  selector:
    app: spring-boot-app-pod
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
