SPRING-BOOT-APP-MANIFEST/grafana_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
  #nginx.ingress.kubernetes.io/rewrite-target: /
  #nginx.ingress.kubernetes.io/rewrite-target: /
  #kubernetes.io/ingress.class: nginx
# nginx.ingress.kubernetes.io/use-regex: "true"
#namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /grafana/
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
